# rud

./: .clang-format  .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
examples/: CMakeLists.txt
examples/basic_triangle/: CMakeLists.txt  README.md
examples/basic_triangle/src/: main.cpp
examples/testing/: CMakeLists.txt
examples/testing/src/: main.cpp
include/rud/: device_manager.h  init.h  rud.h  window.h
src/: device_manager.cpp  init.cpp  rud.cpp  window.cpp
